Refactor README.md to include detailed setup instructions for creating and configuring the SPCS service role, along with necessary privileges. Update env.template and parameters.yml to define new environment variables for warehouse name, service role, and user. Enhance ontology files to reflect role types and privileges, and update execution flow to incorporate new role requirements for various steps.

--- a/config/env.template
+++ b/config/env.template
@@ -3,6 +3,9 @@ export ORGNAME="your-org-name"
 export ACCTNAME="your-account-name"
 export DATABASE="your-database"
 export SCHEMA="your-schema"
+export WAREHOUSE_NAME="your-warehouse"
+export SPCS_ROLE_NAME="SPCS_SERVICE_ROLE"
+export SNOWFLAKE_USER="your-username"
 
 # Compute Pool Configuration
 export COMPUTE_POOL_NAME="MY_GPU_POOL"
